codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__backend_banner_workspace_member_credits.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
                                            
  Usage limit reached                       
  Your included usage is depleted.          
  Choose an action to continue.             
› 1. Open usage settings                    
  2. Notify owner                           
  3. Extra action                           
                                            
  ↵ ok · esc back                           
╭──────────────────────────────────────────╮
┃ ›                                        │
╰ ctrl + t transcript ─────────────────────╯
  ? shortcuts            100% context left
