codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__inline_banner_wrapped_and_truncated.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
                                            
  Choose how to continue working            
  A long description wraps to fit the       
  available terminal width.                 
  A long description wraps to fit the       
  available terminal width.                 
  A long description wraps to fit the       
  available terminal width.                 
  …                                         
› 1. Open usage settings                    
  2. Notify owner                           
                                            
  ↵ ok · esc back                           
╭──────────────────────────────────────────╮
┃ ›                                        │
╰ ctrl + t transcript ─────────────────────╯
  ? shortcuts            100% context left
