codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 1 queued · ⌥ + ↑ edit latest queued           
  Latest: Queued follow-up question             
╭─────────────────────────────────── tab queue ╮
┃ ›                                            │
╰ ctrl + t transcript ─────────────────────────╯
  ? shortcuts                100% context left
