codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
✦ Working                     0s · Esc interrupt
                                                
• 1 queued · ⌥ + ↑ edit latest queued           
  Latest: Queued follow-up question             
╭─────────────────────────────────── tab queue ╮
┃ ›                                            │
╰ ctrl + t transcript ─────────────────────────╯
  ? shortcuts                100% context left
