codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_timer_survives_hidden_row.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
✦ Working            42s · Esc interrupt
                                        
╭─────────────────────────── tab queue ╮
┃ ›                                    │
╰ ctrl + t transcript ─────────────────╯
  ? shortcuts        100% context left
